# rubiks-cube-rl

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: dqn.py
core/: mcts.py  pyproject.toml  requirements.txt
core/agents/: alphazero.py  dqn.py  dqn_cl.py  final.py  mcts_ddqn.py
core/gymnasium_env/env/: rubiks_cube.py
core/helpers/: record_results.py
gymnasium_env/: __init__.py
gymnasium_env/env/: __init__.py  rubiks_cube.py
solver/: Dockerfile  main.py  pyproject.toml
src/agents/: dqn.py  q-learning.py  qrl.py
src/camera/: video.py
src/quantum/: qnn.py  vqc.py
src/results/: dqn_results.csv
webapp/: .dockerignore  Dockerfile  package-lock.json  package.json
webapp/app/: page.tsx
