[project]
name = "rubiks-cube-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle==3.1.1",
    "farama-notifications==0.0.4",
    "gymnasium==1.1.1",
    "numpy==2.2.4",
    "pygame==2.6.1",
    "typing-extensions==4.13.1",
]
